Refactoring of playState to skinny coffee machine.
Getting no real advantage from the state machine yet, but tests are
passing. Time to see if I can get some improvements, then move on to
adding a third state to finalize betting.

--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
 
   "dependencies": {
     "coffee-script": ">= 1.7.1",
+    "skinny-coffee-machine": ">= 0.2.1",
     "jasmine-node": ">= 1.14.0",
     "underscore": "1.6.0"
   },
